Fix: Update build configuration for production

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ lerna-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Example of correct image import in a component
+import logo from '../assets/mrsamlogo(2).jpeg';
