--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,6 @@
   ],
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index1.html" }
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
