--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,15 @@
-{"rewrite": {"source": "/(.*)", "destination": "/" }}
+{
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
+  ]
+}
