--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,7 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
@@ -15,5 +13,4 @@
     "rewrites": [
     { "source": "/(.*)", "destination": "/" }
   ]
-  
 }
