--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm install && vite build",
+    "build": "vite build",
     "preview": "vite preview --port 8080"
   },
   "dependencies": {
@@ -13,11 +13,11 @@
     "framer-motion": "^12.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "@vitejs/plugin-react": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@types/react-dom": "^18.2.0"
   }
 }
